--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@
     </footer>
 
     <script src="./script.js"></script>
+
+    <!-- SLIDER -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 
     <script type="module">
@@ -269,7 +271,7 @@
             autoplay: true,
             axis: 'horizontal',
             controls: false,
-            nav: true,
+            nav: false,
             navPosition: 'bottom',
             autoplayButtonOutput: false,
             mouseDrag: true,
@@ -277,7 +279,6 @@
             responsive: {
                 1024:{
                 items: 3,
-                nav: false,
                 controls: true,
                 controlsText:['<i class="fa-solid fa-chevron-left"></i>','<i class="fa-solid fa-chevron-right"></i>'],
                 slideBy: 1
