updated social links

--- a/index.html
+++ b/index.html
@@ -231,15 +231,15 @@
                     <div class="links-socials-box">
                         <div class="links-socials-box-top">
                             <ul>
-                                <li id="linkedin"><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
-                                <li id="fb"><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                                <li id="ig"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                                <li id="linkedin"><a href="https://www.linkedin.com/company/brains-infinite-innovations-inc/?trk=public_profile_experience-item_profile-section-card_image-click&originalSubdomain=ph"><i class="fa-brands fa-linkedin"></i></a></li>
+                                <li id="fb"><a href="https://www.facebook.com/brains.asia"><i class="fa-brands fa-facebook"></i></a></li>
+                                <li id="ig"><a href="https://www.instagram.com/brainstech.ph/"><i class="fa-brands fa-instagram"></i></a></li>
                             </ul>
                         </div>
                         <div class="links-socials-box-bot">
                             <ul>
-                                <li id="twitter"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                                <li id="yt"><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                                <li id="twitter"><a href="https://www.facebook.com/brains.asia"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li id="yt"><a href="https://www.youtube.com/watch?v=Lrq8ALw5Mq8"><i class="fa-brands fa-youtube"></i></a></li>
                             </ul>
                         </div>
                     </div>
